--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --section-background-menu: #eeeeee;
   --header-border-color: #ececec;
   --border-color: #afb1b8;
+  --footer-background-color-link: #44454e;
 }
 
 h1,
@@ -73,6 +74,10 @@ a {
   color: var(--text-color-secondary);
 }
 
+.nav-list {
+  margin-left: 90px;
+}
+
 .nav-list .link {
   color: var(--text-color-primary);
 }
@@ -81,14 +86,13 @@ a {
   color: var(--text-color-accent);
 }
 
-.logo {
+.header .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--color-logo);
-  margin-right: 90px;
 }
 
 .logo-decoration {
@@ -129,17 +133,12 @@ a {
   margin-right: 10px;
 }
 
-.contacts-list .icon.envelope {
-  width: 16px;
-  height: 12px;
+.contacts-list .icon {
+  fill: var(--text-color-secondary);
 }
 
-.contacts-list .icon.smartphone {
-  width: 10px;
-  height: 16px;
-}
-
-.contacts-list .link:hover .icon {
+.contacts-list .link:hover .icon,
+contacts-list .link:focus .icon {
   fill: var(--text-color-accent);
 }
 
@@ -150,7 +149,6 @@ a {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--color-logo);
-  margin-right: 90px;
 }
 
 .logo-decoration {
@@ -241,7 +239,6 @@ a {
 .benefits .icon {
   width: 70px;
   height: 70px;
-
 }
 
 .benefits .item:not(:first-child) {
@@ -332,13 +329,37 @@ a {
   margin-bottom: 16px;
 }
 
-.social-network {
+.comand .social-network {
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
 }
 
-.social-network.list .item:not(:last-child) {
+.social-network .link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--basic-background-color);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+
+.social-network .icon {
+  fill: var(--border-color);
+}
+
+.social-network .link:hover,
+.social-network .link:focus {
+  background-color: var(--text-color-accent);
+}
+
+.social-network .link:hover .icon,
+.social-network .link:focus .icon {
+  fill: var(--basic-background-color);
+}
+
+.social-network .network-item:not(:last-child) {
   margin-right: 10px;
 }
 
@@ -356,7 +377,6 @@ a {
 .our-clients .item {
   border: 1px solid var(--border-color);
   border-radius: 4px;
-  /* padding: 16px 32px; */
 }
 
 .our-clients .item:hover,
@@ -406,6 +426,16 @@ a {
   display: block;
 }
 
+.portfolio-list .link {
+  display: block;
+}
+
+.portfolio-list .link:hover,
+.portfolio-list .link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-list .description {
   border: 1px solid var(--header-border-color);
   border-top: 1px solid transparent;
@@ -413,15 +443,16 @@ a {
   margin-bottom: 0;
 }
 
-.project-name {
+.link .project-name {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
+  color: var(--text-color-primary);
 }
 
-.project-type {
+.link .project-type {
   color: var(--text-color-secondary);
   font-size: 16px;
   line-height: 1.87;
@@ -466,4 +497,44 @@ a {
 
 .address-list .link.address {
   color: var(--basic-background-color);
+}
+
+.footer .container {
+  display: flex;
+}
+
+.social-network-block {
+  margin-top: 12px;
+  margin-left: 70px;
+}
+
+.subscription-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--basic-background-color);
+  margin-bottom: 20px;
+}
+
+.social-network.footer {
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.social-network-block .icon {
+  fill: var(--basic-background-color);
+}
+
+.social-network-block .link {
+  background-color: var(--footer-background-color-link);
+}
+
+.social-network .link:hover,
+.social-network .link:focus {
+  background-color: var(--text-color-accent);
 }
