--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ a {
 }
 
 .contacts-list .link:hover .icon,
-contacts-list .link:focus .icon {
+.contacts-list .link:focus .icon {
   fill: var(--text-color-accent);
 }
 
@@ -443,8 +443,8 @@ contacts-list .link:focus .icon {
 
 .portfolio-list .link:hover,
 .portfolio-list .link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(219, 3, 3, 0.949), 0px 4px 4px rgba(206, 13, 13, 0.795),
+    1px 4px 6px rgba(255, 0, 0, 0.863);
 }
 
 .portfolio-list .description {
